crates/uniplate/tests/derive-fail/no-generics.stderr
error: Biplate: types with parameters are not supported
 --> tests/derive-fail/no-generics.rs:5:7
  |
5 |     A(F<i32>,G)
  |       ^
